# translator-desktop

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  index.html  master-agent.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/guides/: 001-deployment-and-updates.md
docs/plan/: 001-desktop-migration-plan.md  002-ui-redesign-sidebar-settings.md  003-realtime-settings-sync.md
scripts/: build-sidecar.ps1  build-sidecar.sh  generate-icons.cjs  generate-icons.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_history.sql
src-tauri/src/: lib.rs  macos_monitor.rs  main.rs  popup_handler.rs  sidecar.rs
src-tauri/src/commands/: confirmation.rs  history.rs  hotkey.rs  mod.rs  popup.rs  settings.rs  speak.rs  translate.rs  window.rs
src-tauri/src/ipc/: config_pipe.rs  mod.rs  named_pipe.rs
src/components/: Sidebar.tsx  StatusBar.tsx  ThemeToggle.tsx  TitleBar.tsx  UpdateNotification.tsx
src/contexts/: SettingsContext.tsx  ThemeContext.tsx
src/features/confirmation/: ConfirmationDialog.tsx  ConfirmationWindow.tsx  index.ts
src/features/history/: HistoryPanel.tsx
src/features/popup/: PopupOverlay.tsx  PopupWindow.tsx  index.ts
src/features/settings/: SettingsPanel.tsx
src/features/translator/: LanguageSelector.tsx  MetadataSection.tsx  TranslationPanel.tsx  index.ts
src/hooks/: useConfirmation.ts  useHistory.ts  useIpcListener.ts  useSettings.ts  useTheme.ts  useTranslation.ts  useUpdater.ts
src/services/: translationService.ts
src/utils/: debounce.ts
text-monitor/TextMonitor.Service/: BuildInfo.cs  Directory.Build.props  Program.cs  TextMonitor.Service.csproj
text-monitor/TextMonitor.Service/Enums/: RetrievalMethod.cs  SelectionState.cs
text-monitor/TextMonitor.Service/Events/: SelectionEventAggregator.cs
text-monitor/TextMonitor.Service/Interfaces/: IClipboardService.cs  IGlobalHookService.cs  ISelectionEventAggregator.cs  ITextRetrievalService.cs  ITextSelectionMonitor.cs  IUIAutomationService.cs
text-monitor/TextMonitor.Service/Ipc/: ConfigurationReceiver.cs  IpcServer.cs
text-monitor/TextMonitor.Service/Models/: ClipboardState.cs  ConfigurationMessage.cs  FocusedElementInfo.cs  MouseEventData.cs  SelectionCoordinates.cs  TextRetrievalResult.cs  TextSelectionEvent.cs
text-monitor/TextMonitor.Service/Monitoring/: CursorTracker.cs  SelectionStateMachine.cs  TextSelectionMonitor.cs
text-monitor/TextMonitor.Service/Services/: GlobalHookService.cs
text-monitor/TextMonitor.Service/TextRetrieval/: ClipboardService.cs  TextRetrievalEngine.cs  UIAutomationService.cs
text-monitor/TextMonitor.Test/: Program.cs  TextMonitor.Test.csproj
